--- a/mockup/index.html
+++ b/mockup/index.html
@@ -8,23 +8,60 @@
 <body>
 <div id="wrapper">
 	<div id="header">
+		<div id="welcome">
+			<p>Welcome, Username</p>
+			<a href="logout" title="Logout">[Logout]</a>
+		</div>
 		<div id="navbar">
 			<div id="logo"></div>
 			<a href="index.html" title="Home" id="home"></a>
-			<div id="navigation">
+			<nav id="navigation">
 				<ul>
 					<li><a href="devices.html" title="Devices">Devices</a></li>
 					<li><a href="schedule.html" title="Schedule">Schedule</a></li>
 					<li><a href="account.html" title="Account">Account</a></li>
 				</ul>
-			</div>
+			</nav>
 		</div>
 	</div>
-	<div id="content"></div>
+	<div id="content">
+		<div id="main">
+			<div id="content-title">
+				<div id="left-separator" class="separator"></div>
+				<h1>Page Title</h1>
+				<div id="right-separator" class="separator"></div>
+			</div>
+			<div class="content-section">
+				<h1>Section Title</h1>
+				<div class="link-separator"></div>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin turpis elit, lacinia in lectus a, pretium viverra elit. Curabitur at suscipit lacus. Nulla blandit nisi orci. Suspendisse erat lacus, viverra sit amet vestibulum nec, viverra in est. Donec nibh lorem, posuere in vehicula at, venenatis a mi. Nullam eu lacus imperdiet, tincidunt ante at, tempor purus. Cras venenatis venenatis cursus. Donec in turpis sapien. Quisque nec tempus orci, a tempor libero. Cras iaculis interdum fermentum. Vestibulum pellentesque nibh massa, eu sollicitudin leo lobortis in. Proin accumsan ultrices vulputate. Vivamus non leo vel nunc tempus ornare.
+
+Etiam et nisl ullamcorper, vulputate eros vitae, elementum nibh. In pulvinar gravida lacinia. Quisque sed sem ultricies, varius libero ut, mollis nisl. Nunc lectus felis, imperdiet vulputate bibendum ac, dapibus eget massa. Donec vulputate nulla ac malesuada rutrum. Morbi fringilla velit sed mauris luctus cursus. Morbi vitae lacus tincidunt neque venenatis rutrum. Nullam sapien urna, viverra id mauris eget, congue lobortis nisi. Nullam eget feugiat leo. Duis sed tincidunt massa. Integer ut ullamcorper nisi. Curabitur hendrerit, sapien a fringilla pulvinar, lorem leo lacinia urna, et porta nisl odio quis ipsum. Donec nulla arcu, laoreet rutrum euismod sed, convallis nec eros. Suspendisse nec nisl ac elit dignissim posuere. In non vulputate elit, eu vestibulum quam.</p>
+			</div>
+			<div class="content-section">
+				<h1>Section Title 2</h1>
+				<div class="link-separator"></div>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin turpis elit, lacinia in lectus a, pretium viverra elit. Curabitur at suscipit lacus. Nulla blandit nisi orci. Suspendisse erat lacus, viverra sit amet vestibulum nec, viverra in est. Donec nibh lorem, posuere in vehicula at, venenatis a mi. Nullam eu lacus imperdiet, tincidunt ante at, tempor purus. Cras venenatis venenatis cursus. Donec in turpis sapien. Quisque nec tempus orci, a tempor libero. Cras iaculis interdum fermentum. Vestibulum pellentesque nibh massa, eu sollicitudin leo lobortis in. Proin accumsan ultrices vulputate. Vivamus non leo vel nunc tempus ornare.
+
+Etiam et nisl ullamcorper, vulputate eros vitae, elementum nibh. In pulvinar gravida lacinia. Quisque sed sem ultricies, varius libero ut, mollis nisl. Nunc lectus felis, imperdiet vulputate bibendum ac, dapibus eget massa. Donec vulputate nulla ac malesuada rutrum. Morbi fringilla velit sed mauris luctus cursus. Morbi vitae lacus tincidunt neque venenatis rutrum. Nullam sapien urna, viverra id mauris eget, congue lobortis nisi. Nullam eget feugiat leo. Duis sed tincidunt massa. Integer ut ullamcorper nisi. Curabitur hendrerit, sapien a fringilla pulvinar, lorem leo lacinia urna, et porta nisl odio quis ipsum. Donec nulla arcu, laoreet rutrum euismod sed, convallis nec eros. Suspendisse nec nisl ac elit dignissim posuere. In non vulputate elit, eu vestibulum quam.</p>
+			</div>
+			<div class="content-section">
+				<h1>Login</h1>
+				<div class="link-separator"></div>
+				<form>
+					Username: <input type="text" name="username"><br>
+					Password: <input type="password" name="psswrd">
+				</form>
+			</div>
+		</div>
+		<div id="sidebar">
+			<h1>Sidebar</h1>
+		</div>
+	</div>
 	<div id="footer">
-		<div class="section-separator"></div>
+		<div class="separator"></div>
 		<div class="link-section">
-			<h1>Title</h1>
+			<h1>Footer Title</h1>
 			<div class="link-separator"></div>
 			<ul>
 				<li><a href="link1" title="Link 1">Link 1</a></li>
@@ -34,7 +71,7 @@
 			</ul>
 		</div>
 		<div class="link-section">
-			<h1>Title</h1>
+			<h1>Footer Title</h1>
 			<div class="link-separator"></div>
 			<ul>
 				<li><a href="link1" title="Link 1">Link 1</a></li>
@@ -44,7 +81,7 @@
 			</ul>
 		</div>
 		<div class="link-section">
-			<h1>Title</h1>
+			<h1>Footer Title</h1>
 			<div class="link-separator"></div>
 			<ul>
 				<li><a href="link1" title="Link 1">Link 1</a></li>
